@startuml

title __DAO's Class Diagram__\n

  namespace nl.han.oose.jellema.rick.data.dao {
    class nl.han.oose.jellema.rick.data.dao.PlaylistsDao {
        {static} + DATABASE_PROPERTIES : String
        {static} + DELETE_FROM_PLAYLISTS_WHERE_ID : String
        {static} + DELETE_FROM_TRACKS_OF_PLAYLIST_WHERE_PLAYLIST_ID : String
        {static} + INSERT_INTO_PLAYLISTS_VALUES : String
        {static} + SELECT_ALL_TRACKS_OF_PLAYLIST : String
        {static} + SELECT_FROM_PLAYLISTS : String
        {static} + UPDATE_PLAYLISTS_SET_NAME_OWNER_WHERE_ID : String
        - connection : Connection
        + all()
        + create()
        + delete()
        + edit()
        + setDatabase()
    }
  }
  

  namespace nl.han.oose.jellema.rick.data.dao {
    class nl.han.oose.jellema.rick.data.dao.TracksDao {
        {static} + DATABASE_PROPERTIES : String
        {static} + DELETE_FROM_TRACKS_OF_PLAYLIST_WHERE_PLAYLISTID_AND_TRACKID : String
        {static} + FIND_TRACKS_NOT_IN_PLAYLIST : String
        {static} + FIND_TRACK_ID : String
        {static} + INSERT_INTO_TRACKS_OF_PLAYLIST_VALUES : String
        {static} + SELECT_TRACKS_BY_PLAYLIST_ID : String
        - connection : Connection
        + add()
        + delete()
        + findTrackByID()
        + findTracksByPlaylistID()
        + findTracksNotInPlaylist()
        + setDatabase()
    }
  }
  

  namespace nl.han.oose.jellema.rick.data.dao {
    class nl.han.oose.jellema.rick.data.dao.UserDao {
        {static} + DATABASE_PROPERTIES : String
        {static} + SELECT_FROM_USERS_WHERE_USERNAME_LIKE : String
        - connection : Connection
        + find()
    }
  }
  

  nl.han.oose.jellema.rick.data.dao.PlaylistsDao .up.|> nl.han.oose.jellema.rick.data.dao.interfaces.IPlaylistsDao
  nl.han.oose.jellema.rick.data.dao.PlaylistsDao o-- nl.han.oose.jellema.rick.data.database.Database : database
  nl.han.oose.jellema.rick.data.dao.TracksDao .up.|> nl.han.oose.jellema.rick.data.dao.interfaces.ITracksDao
  nl.han.oose.jellema.rick.data.dao.TracksDao o-- nl.han.oose.jellema.rick.data.database.Database : database
  nl.han.oose.jellema.rick.data.dao.UserDao .up.|> nl.han.oose.jellema.rick.data.dao.interfaces.IUserDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
